package com.erapps.itunespreview.ui.screens.utils

object TestTags {
    //searchbar screen components
    const val SEARCH_BAR_TAG = "SearchBar"
    const val ICON_BUTTON_TAG = "SearchBarIconButtonTag"
    const val TRAILING_ICON_BUTTON_TAG = "TrailingIconButton"
    const val CIRCULAR_PROGRESS_INDICATOR = "CircularProgressIndicator"
}